# pan-spicka

./: Cargo.toml
src/: chatbot.rs  database.rs  lunch_fetch.rs  main.rs  rozvrh.rs  zmeny.rs
