[package]
name = "pan-spicka"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }
